# robot

./: so.sh
install/: local_setup.sh  setup.sh
install/include/thur/: serial.hpp
install/lib/ros2_control_demo_example_7/: send_trajectory
install/share/ros2_control_demo_description/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_1/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_10/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_11/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_12/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_14/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_15/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_2/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_3/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_4/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_5/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_6/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_7/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_8/: package.dsv  package.ps1  package.sh
install/share/ros2_control_demo_example_9/: local_setup.sh  package.dsv  package.ps1  (+1 more)
log/: latest_build
src/ros2_control_demos/thur/: CMakeLists.txt  thur.xml
src/ros2_control_demos/thur/bringup/launch/: thur.launch.py
src/ros2_control_demos/thur/description/urdf/: thur.urdf.xacro
src/ros2_control_demos/thur/hardware/: serial.cpp  thur_diff.cpp
src/ros2_control_demos/thur/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
(+20 files in other folders)
